// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorPage component renders a default error message when no error is provided 1`] = `
<div
  className="flex align-center justify-center flex-column flex-grow-1"
>
  <div
    className="error-container"
  >
    <h1
      className="error-title"
    >
      Oops!
    </h1>
    <p
      className="error-subtitle"
    >
      Sorry, an unexpected error has occurred.
    </p>
  </div>
</div>
`;

exports[`ErrorPage component renders the error message 1`] = `
<div
  className="flex align-center justify-center flex-column flex-grow-1"
>
  <div
    className="error-container"
  >
    <h1
      className="error-title"
    >
      Oops!
    </h1>
    <p
      className="error-subtitle"
    >
      Sorry, an unexpected error has occurred.
    </p>
    <p
      className="error-text"
    >
      <i>
        Not Found
      </i>
    </p>
  </div>
</div>
`;
